--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./loader.css">
+    <link rel="icon" href="./images/android-chrome-512x512.png" type="image/x-icon">
     
     
     <title>Convex</title>
